01_first-demo-app/demo-app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-world
  template:
    metadata:
      labels:
        app: hello-world
    spec:
      containers:
      - name: hello-world-app
        image: nginxdemos/hello:latest
        ports:
        - containerPort: 80
