01_first-demo-app/demo-app-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-http
spec:
  ingressClassName: nginx
  rules:
  - host: <replaceme>.k8s.decrinis.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hello-world-service
            port:
              number: 80
  tls:
  - hosts:
    - <replaceme>.k8s.decrinis.com
    secretName: hello-tls
